--- a/login/static/css/style.css
+++ b/login/static/css/style.css
@@ -455,6 +455,11 @@ select {
 	padding-top: 50px;
 }
 
+ .pfp-username {
+	font-size: 15px !important; 
+	text-align: center;
+}
+
 .user-history-container2,
 .polls-created-container {
   width: 50%;
@@ -915,7 +920,8 @@ select {
   }
 
   .text-muted {
-	font-size: 14px;
+	font-size: 11px;
+	color:grey;
   }
 
   .notif-container {
@@ -929,4 +935,11 @@ select {
 	min-height: 75%;
 	/* max-height: 75%; */
 	color:#222;
+}
+
+
+.noti-link-post {
+	font-size: 15px;
+	color: #3366ff;
+
 }
