--- a/login/static/css/style.css
+++ b/login/static/css/style.css
@@ -945,6 +945,11 @@ select {
 }
 .history-option-text {
 	font-size: 16px;
+	font-weight: bold;
+	color: 
+}
+.history-option-text {
+	font-size: 15px;
 }
 .history-option-text.color1 {
     color: #AED9E0;
