--- a/login/static/css/style.css
+++ b/login/static/css/style.css
@@ -943,10 +943,13 @@ select {
 	color: #3366ff;
 
 }
+.history-title {
+	font-size:16px;
+	font-weight: bold;
+
+}
 .history-option-text {
 	font-size: 16px;
-	font-weight: bold;
-	color: 
 }
 .history-option-text {
 	font-size: 15px;
