--- a/login/static/css/style.css
+++ b/login/static/css/style.css
@@ -969,3 +969,9 @@ select {
 .history-option-text.color4 {
     color: #5D6DD3;
 }
+
+.noti-post-title {
+	color: blue;
+	font-weight: bold;
+	font-size: 15px;
+}
